--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/effects": "^4.0.5",
+    "@ngrx/router": "^1.0.0-beta.2",
+    "@ngrx/router-store": "^4.0.4",
+    "@ngrx/store": "^4.0.3",
     "core-js": "^2.4.1",
+    "ngrx-store-logger": "^0.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
